--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -28,7 +28,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>HdM Bank Client Advisor Home</title>
+  <title>HdM Zeiterfassung</title>
 </head>
 
 <body>
